# thermal-seek-xr-image-streamer

./: 51-seek-thermal.rules  CMakeLists.txt  README.md  args.h  install.sh  main.cpp  streamer.cpp
